// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryToolbar should render desc direction 1`] = `
<Button
  onClick={[Function]}
  variant="plain"
>
  <Icon
    size="md"
  >
    <SortAmountDownIcon />
  </Icon>
</Button>
`;

exports[`PrimaryToolbar should render no data 1`] = `
<Button
  onClick={[Function]}
  variant="plain"
>
  <Icon
    size="md"
  >
    <SortAmountUpIcon />
  </Icon>
</Button>
`;
